--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -16,14 +16,18 @@
     <meta name="Title" content="">
     <meta name="Description" content="">
     <base href="/">
+    <link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>{{pageInfo.PageTitle}}</title>
+    <title>{{pageInf.title}}</title>
 </head>
 
     {{{body}}}
 
-    <script src="js/script.js"></script>
+    <script defer src="js/script.js"></script>
+    <script defer src ="/socket.io/socket.io.js"></script>
+    <script defer src="{{pageInf.script}}"></script>
+
 </html>
 
 
