Add peer2peer video connection to application, working now

--- a/server/views/rooms.hbs
+++ b/server/views/rooms.hbs
@@ -1,12 +1,16 @@
 <body>
-  <h1>Hi! Welcome in your room</h1>
+  <header>
+    <h1>Hi! Welcome in your room</h1>
+  </header>
 
-
-  <section class="videoGrid">
-
-  </section>
-
-  <p>Your room ID is <span id="roomID">{{room}}</span></p>
+  <main>
+    <section class="videoGrid">
+    </section>
+  </main>
+    
+  <footer>
+    <p>Your room ID is <span id="roomID">{{room}}</span></p>
+  </footer>
 </body>
 
-{{!-- <script src="http://localhost:3333{{pageInf.sockets}}"></script> --}}
+<script src="http://localhost:3333{{pageInf.sockets}}"></script>
