--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -25,8 +25,10 @@
     {{{body}}}
 
     <script defer src="js/script.js"></script>
+    <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script defer src ="/socket.io/socket.io.js"></script>
     <script defer src="{{pageInf.script}}"></script>
+
 
 </html>
 
