Create dynamic routes for css and js, and added basic styling + readme info

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+  line-height: 1;
+}
+
+html {
+  font-size: 16px;
+}
+
+body {
+  background-color: #21242b;
+  color: #eeeeef;
+}
+
 .videoGrid {
   display: grid;
   grid-template-columns: repeat(auto-fill, 400px);
