Added status bar

--- a/server/views/rooms.hbs
+++ b/server/views/rooms.hbs
@@ -5,7 +5,19 @@
 
   <main>
     <section class="videoGrid">
+      <aside>
+        <ul>
+          <li id="muteMyself">Mute</li>
+          <li id="stopVideo">Stop video</li>
+          <li id="endCall">End call</li>
+          <li id="inviteUser">Invite</li>
+          <li id="openChat">Chat</li>
+        </ul>
+      </aside>
     </section>
+    <section class="chatGrid">
+    </section>
+
   </main>
     
   <footer>
