--- a/server/views/rooms.hbs
+++ b/server/views/rooms.hbs
@@ -14,6 +14,10 @@
           <li id="openChat">Chat</li>
         </ul>
       </aside>
+      <div class="invitePopUp">
+         <input type="text" name="roomID" id="roomID">
+         <button id="copyRoomID">Copy invitation link</button>
+      </div>
     </section>
     <section class="chatGrid">
     </section>
