--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -29,9 +29,11 @@
     {{{body}}}
 
     <script defer src="js/script.js"></script>
-    <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-    <script defer src ="/socket.io/socket.io.js"></script>
-    <script defer src="js/{{pageInf.script}}"></script>
+    <script  src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
+    <script  src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+    {{#if pageInf.script}}
+      <script defer src="js/{{pageInf.script}}"></script>
+    {{/if}}
 
 
 </html>
