--- a/server/views/rooms.hbs
+++ b/server/views/rooms.hbs
@@ -5,7 +5,7 @@
 
   <main>
     <section class="videoGrid">
-      {{!-- <aside>
+       <aside>
         <ul>
           <li id="muteMyself">Mute</li>
           <li id="stopVideo">Stop video</li>
@@ -17,7 +17,7 @@
       <div class="invitePopUp">
          <input type="text" name="roomID" id="roomID">
          <button id="copyRoomID">Copy invitation link</button>
-      </div> --}}
+      </div> 
     </section>
     <section class="chatGrid">
     </section>
