--- a/public/css/rooms.css
+++ b/public/css/rooms.css
@@ -22,7 +22,7 @@ main {
 }
 
 main section {
-  transition: 0.3s ease;
+  transition: 0.2s ease;
 }
 main .videoGrid {
   /* background-color: aquamarine; */
@@ -33,12 +33,12 @@ main .videoGrid {
   justify-content: center;
   align-items: center;
   width: 100%;
-  transition: 0.3s ease;
+  transition: 0.2s ease;
 }
 
 main video {
-  width: clamp(300px, 45%, 100vw);
-  height: clamp(300px, 30vh, 100vh);
+  width: clamp(300px, 35%, 600px);
+  height: clamp(250px, 40vh, 250px);
   object-fit: cover;
   border-radius: 8px;
 }
@@ -65,6 +65,7 @@ main .videoGrid aside ul li {
   border-radius: 8px;
   list-style-type: none;
   padding: 1rem;
+  margin: 0 0.5rem;
 }
 
 main .videoGrid aside ul li:nth-child(3) {
@@ -111,7 +112,7 @@ main .videoGrid .invitePopUp button {
 main .chatGrid {
   height: 30vh;
   background-color: bisque;
-  transition: 0.3s ease;
+  transition: 0.2s ease;
   position: relative;
 }
 
@@ -120,10 +121,42 @@ main .chatGrid article:first-of-type {
   width: 100%;
 }
 
-main .chatGrid article ul {
+main .chatGrid article:first-of-type ul {
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
   list-style-position: inside;
   color: black;
 }
+
+main .chatGrid article:first-of-type ul li {
+  list-style-type: none;
+  padding: 0.5rem;
+  border: 1px solid #43acd7;
+  border-radius: 8px;
+  background-color: #43acd7;
+  color: white;
+  position: relative;
+}
+
+main .chatGrid article:first-of-type ul li::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 24px;
+  height: 24px;
+  background-color: #43acd7;
+  transform: rotate(45deg) translateY(-57%);
+  z-index: -1;
+  left: -1rem;
+  top: 50%;
+}
+
+main .chatGrid article:first-of-type ul li p:first-of-type {
+  padding-bottom: 0.5rem;
+  font-weight: 700;
+}
+
 main .chatGrid article:last-of-type {
   position: absolute;
   bottom: 0;
@@ -157,6 +190,10 @@ main .chatGrid article:last-of-type form button {
   main {
     flex-direction: row;
     overflow-x: hidden;
+  }
+  main video {
+    width: clamp(350px, 35%, 600px);
+    height: clamp(300px, 40vh, 500px);
   }
   main .videoGrid {
     width: 100%;
