--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -30,7 +30,7 @@
 
     <script defer src="js/script.js"></script>
     <script  src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
-    <script  src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+    <script  src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.js"></script>
 </html>
 
 
