--- a/server/views/rooms.hbs
+++ b/server/views/rooms.hbs
@@ -1,7 +1,7 @@
 <body>
   <header>
     <h1>iCall</h1>
-    <p>{{room}}</p>
+    <p id="roomID">{{room}}</p>
     <p id="userName">{{userName}}</p>
   </header>
 
@@ -47,7 +47,7 @@
       </div> 
     </section>
     <section class="chatGrid">
-        <article >
+        <article class="chatContainer">
           <ul class="chatMessages">
 
           </ul>
