--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,39 @@
 h1 {
   text-align: center;
 }
+
+main {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 1rem;
+}
+
+main section {
+  padding: 1rem;
+}
+
+main section form fieldset {
+  border: none;
+  display: flex;
+  flex-direction: column;
+}
+
+input[type='text'],
+input[type='submit'] {
+  padding: 1rem 0.5rem;
+  border-radius: 8px;
+  margin: 0.5rem 0;
+}
+
+input[type='submit'] {
+}
+
+@media (min-width: 600px) {
+  main {
+    max-width: 800px;
+    margin: 0 auto;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 3rem;
+  }
+}
