--- a/public/css/rooms.css
+++ b/public/css/rooms.css
@@ -29,9 +29,9 @@ main section {
 main .videoGrid {
   position: relative;
   padding: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  place-items: center;
   width: 100%;
   transition: 0.2s ease;
   height: 100vh;
@@ -181,6 +181,15 @@ main .chatGrid .chatContainer ul li p:nth-of-type(3):before {
   content: '— ';
 }
 
+main .chatGrid .chatContainer ul .ownMessage {
+  justify-content: flex-end;
+  text-align: right;
+}
+
+main .chatGrid .chatContainer ul .ownMessage p:nth-of-type(1) {
+  background-color: #348065;
+}
+
 /** Chat container **/
 main .chatGrid .chatForm {
   position: absolute;
@@ -214,6 +223,25 @@ main .chatGrid .chatForm form button {
   font-size: 17px;
 }
 
+/** Scroll bar **/
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #585f67;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #101720;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #2c2d2f;
+}
 /** States **/
 .activeMenuItem {
   background-color: rgba(47, 47, 57, 0.7);
@@ -223,15 +251,18 @@ main .chatGrid .chatForm form button {
   main {
     flex-direction: row;
   }
-  main video {
+  main .videoGrid video {
     width: clamp(350px, 35%, 600px);
     height: clamp(300px, 40vh, 500px);
   }
   main .videoGrid {
     width: 100%;
+    height: 100vh;
+    grid-template-columns: 1fr 1fr;
   }
   main .videoGrid.active {
     width: clamp(calc(100% - 300px), calc(100% - 40vw), calc(100% - 600px));
+    height: 100vh;
   }
   main .chatGrid {
     width: 0%;
