--- a/public/css/rooms.css
+++ b/public/css/rooms.css
@@ -15,6 +15,10 @@ header p {
   font-size: 0.8rem;
 }
 
+header p:first-of-type {
+  display: none;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -46,11 +50,14 @@ main .chatGrid.active {
 }
 
 main video {
-  width: clamp(300px, 35%, 600px);
-  height: clamp(250px, 40vh, 250px);
+  /* width: clamp(300px, 35%, 600px);
+  height: clamp(250px, 40vh, 250px); */
   object-fit: cover;
   margin: 0.5rem;
   border-radius: 8px;
+  width: 80%;
+  max-width: 400px;
+  height: auto;
 }
 
 main .videoGrid aside {
@@ -71,7 +78,6 @@ main .videoGrid aside ul {
 }
 
 main .videoGrid aside ul li {
-  order-radius: 8px;
   list-style-type: none;
   padding: 1rem;
   margin: 0 0.5rem;
@@ -248,30 +254,35 @@ main .chatGrid .chatForm form button {
 }
 
 @media screen and (min-width: 800px) {
+  header p:first-of-type {
+    display: block;
+  }
+
   main {
     flex-direction: row;
   }
-  main .videoGrid video {
-    width: clamp(350px, 35%, 600px);
-    height: clamp(300px, 40vh, 500px);
-  }
+
   main .videoGrid {
     width: 100%;
     height: 100vh;
     grid-template-columns: 1fr 1fr;
   }
+
   main .videoGrid.active {
     width: clamp(calc(100% - 300px), calc(100% - 40vw), calc(100% - 600px));
     height: 100vh;
   }
+
   main .chatGrid {
     width: 0%;
     transform: translateX(40%);
   }
+
   main .chatGrid.active {
     width: clamp(300px, 40vw, 600px);
     transform: translateX(0);
   }
+
   main .videoGrid,
   main .chatGrid {
     height: 100vh;
