--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,7 @@ li {
 html {
   font-size: 16px;
 }
-
+/* 
 body {
   background-color: #101720;
   color: #eeeeef;
@@ -26,4 +26,4 @@ body {
 
 a {
   color: #eeeeef;
-}
+} */
