Added PeerID by user leaving

--- a/server/views/rooms.hbs
+++ b/server/views/rooms.hbs
@@ -68,6 +68,6 @@
 
   </main>
     
-  <script defer src="js/{{pageInf.script}}"></script>
+  <script type="module" defer src="js/{{pageInf.script}}"></script>
 </body>
 
