--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -19,7 +19,7 @@
           <a href="/">Contact</a>
         </li>
       </ul>
-      <a href="/dashboard">Sign up</a>
+      <a href="/register">Sign up</a>
     </nav>
     <h1>iCall</h1>
     <h2>That's what iCall intuitive</h2>
