--- a/server/views/login.hbs
+++ b/server/views/login.hbs
@@ -11,7 +11,7 @@
         <p>{messages.error}</p>
       {{/if}}
 
-      <form action="/login" method="POST">
+      <form method="POST" action="/postLogin" id="loginForm">
         <fieldset class="form-group">
           <label for="email">Email</label>
           <input
@@ -44,4 +44,7 @@
 
     </section>
   </main>
+  <script>
+
+  </script>
 </body>
