--- a/public/css/home.css
+++ b/public/css/home.css
@@ -196,6 +196,7 @@ footer p a {
   main section:nth-child(1) img {
     top: -150px;
     max-height: 550px;
+    max-width: 100%;
     width: auto;
     margin: 0 auto;
   }
