--- a/server/views/dashboard.hbs
+++ b/server/views/dashboard.hbs
@@ -1,6 +1,11 @@
 <body>
   <header>
     <h1>iCall</h1>
+
+    <div>
+      <p>{{user.given_name}} {{user.family_name}}</p>
+      <img src="{{user.picture}}" alt="">
+    </div>
   </header>
 
   <main>
