--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -1,7 +1,7 @@
 <body>
   <header>
     <nav>
-      <a href="/">iCall</a>
+      <a href="/"><img src="./assets/icons/icon.png" alt="iCall logo"></a>
       <ul>
         <li>
           <a href="/">Home</a>
