--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -16,7 +16,7 @@
     <meta name="Title" content="">
     <meta name="Description" content="">
     <base href="/">
-    <link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
+    <link rel="shortcut icon" type="image/png" href="assets/icons/icon.png"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     {{#if pageInf.styles}}
