--- a/public/css/rooms.css
+++ b/public/css/rooms.css
@@ -42,23 +42,32 @@ main section {
 main .videoGrid {
   position: relative;
   margin: 4rem 0.5rem 5rem 0.5rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  place-items: center;
+  /* display: grid; */
+  /* grid-template-columns: 1fr 1fr; */
+  /* place-items: center; */
   width: calc(100vw - 1rem);
   transition: 0.2s ease;
   height: calc(100vh - 9rem);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 main .videoGrid.active {
   height: 70vh;
 }
 main .videoGrid video {
   object-fit: cover;
-  margin: 0.5rem;
+  /* margin: 0.5rem; */
   border-radius: 8px;
-  width: 90%;
-  height: 250px;
-  box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.1), 0 6px 20px 0 rgba(255, 255, 255, 0.1);
+  /* width: 90%; */
+  /* max-width: 430px; */
+  /* height: 250px; */
+  box-shadow: 0 4px 8px 0 rgb(255 255 255 / 10%), 0 6px 20px 0 rgb(255 255 255 / 10%);
+  width: calc(50% - 2rem);
+  max-width: 400px;
+  margin: 1rem;
+  height: calc(50% - 2rem);
+  max-height: 300px;
 }
 main .videoControls {
   color: #eeeeef;
